Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77107

QtQuickControls 2 Fusion style broken on current Gnome

    XMLWordPrintable

Details

    Description

      QtQuickControls 2 Fusion style is unusable on current Gnome. I tested the following on the current Fedora Rawhide with its default Gnome desktop and Qt packages (Gnome 3.33, Qt 5.12.4).

      The attached screenshot shows the Slider item from the gallery example in the qt5-qtquickcontrols2-examples package after switching the style to Fusion. As can be seen, only the knob of the sliders are visible, but not its sliding line. Other problems I noticed are: the menus borders are invisible (black menu background on black window background) and so are menu items that are not enabled (black text on black background).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srutledg Shawn Rutledge
            enz Markus Enzenberger
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes