Don't use Fusion style on desktop anymore because it is currently broken on some Linux distributions (QTBUG-77107).